doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Users\340763200\Documents\greenfoot usb\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\greenfoot.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\bluejcore.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\bluejeditor.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\bluejext2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-jupiter-5.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-jupiter-api-5.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-jupiter-engine-5.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-jupiter-params-5.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-platform-commons-1.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-platform-console-1.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-platform-engine-1.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-platform-launcher-1.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-platform-reporting-1.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-platform-runner-1.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-platform-suite-api-1.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-platform-testkit-1.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-quickcheck-core-0.9.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\junit-vintage-engine-5.5.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\hamcrest-core-1.3.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\bluej.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\classgraph-4.8.90.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\diffutils-1.2.1.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\jl1.0.1.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\opencsv-2.3.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\xom-1.2.9.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\lang-stride.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\nsmenufx-2.1.8.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\guava-17.0.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\httpclient-4.1.1.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\httpcore-4.1.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\httpmime-4.1.1.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\javafx\lib\javafx.base.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\javafx\lib\javafx.media.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Users\340763200\Documents\greenfoot usb\greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\340763200\Documents\GitHub\greenfoot-final-project-nathan
-d
C:\Users\340763200\Documents\GitHub\greenfoot-final-project-nathan\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\340763200\Documents\GitHub\greenfoot-final-project-nathan\MyWorld.java
<---- end of javadoc command ---->
Loading source file C:\Users\340763200\Documents\GitHub\greenfoot-final-project-nathan\MyWorld.java...
C:\Users\340763200\Documents\GitHub\greenfoot-final-project-nathan\MyWorld.java:20: error: ';' expected
        int[] xnumbers
                      ^
C:\Users\340763200\Documents\GitHub\greenfoot-final-project-nathan\MyWorld.java:25: error: illegal start of expression
            addObject(mine,, randomInt);
                           ^
2 errors
